@@ -1,5 +1,11 @@
 2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/filetree.cc (FileTree::find_increment_file_count): There
+	is no need for the reverse_iterator abstraction here -- just use
+	plain iterators and decrement them.
+
+2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/filetree.cc (FileTree::prev_match_file): As it turns out
 	keeping track of the parent iterator does have some merit.  While
 	there was nothing wrong with the previous change, I discovered
